# apollo-1

./: .env.example  .gitignore  README.md  pyproject.toml
.agent/rules/: documentation.md  python.md  structure.md  versioning.md
.agent/skills/commit-helper/: SKILL.md
.agent/workflows/: commit.md  python.md
.gemini/: agent.md  settings.json
apollo/: __init__.py
apollo/apollo_1/: __init__.py  llm.py
apollo/apollo_1/agents/: __init__.py  srs_analyst.py
apollo/apollo_1/tools/: __init__.py  knowledge_base.py  redmine.py
docs/plans/: v0.1.0_refactor_tools.md  v0.2.0_refactor_to_package.md  v0.3.0_local_llm_support.md
docs/walkthroughs/: v0.1.0_refactor_tools.md  v0.2.0_refactor_to_package.md  v0.3.0_local_llm_support.md
src/agents/: srs_analyst.py
src/tools/: knowledge_base.py  redmine.py
tests/: __init__.py  conftest.py  test_agents.py  test_llm.py  test_package.py  test_tools.py
